--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,56 @@
-.nav-link.ml-lg-0 {
+header {
+    padding: 2em 2em 0 2em;
+}
+
+.top-bar_sub .btn-primary {
+    color: #000;
+    background-color: #00bce400;
+    border: 2px solid #00bce4;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
+.top-bar_sub .btn-primary:hover {
+    color: #fff;
+    background-color: #00bce4;
+    border: 2px solid #00bce4;
+}
+
+.btn-primary:focus,
+.btn-primary.focus,
+.btn:focus,
+.btn.focus,
+.btn-primary:not(:disabled):not(.disabled):active:focus,
+.btn-primary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-primary.dropdown-toggle:focus {
+    box-shadow: none;
+}
+
+span.sub {
+    font-size: 10px;
+    vertical-align: top;
+    background: #fff;
+    color: #555;
+    padding: 4px 12px;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.14);
+}
+
+h1.logo-w3layouts a.navbar-brand {
+    font-size: 1.5em;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.26);
+    color: #454546;
+    margin: 0;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+}
+
+.top-header {
+    background: none !important;
+}
+
+.navbar-light .navbar-nav .nav-link,
+.dropdown-item {
     color: #828284;
     font-size: 16px;
     letter-spacing: 2px;
@@ -7,7 +59,160 @@
     text-transform: uppercase;
 }
 
-.cart-inner-info li {
+.dropdown-item {
+    margin: 0 !important;
+    color: #777;
+}
+
+.dropdown-menu {
+    background-color: rgb(255, 255, 255);
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+    color: #000;
+    text-decoration: none;
+    background-color: #ffffff;
+}
+
+.dropdown-item:hover,
+.dropdown-item:focus {
+    color: #16181b;
+    text-decoration: none;
+    background-color: #eef0f3;
+}
+
+.navbar-light .navbar-nav .show>.nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link:hover {
+    color: #ff4e00;
+    border-radius: 0px;
+}
+
+.dropdown-menu {
     padding: 0;
 }
 
+/*---*/
+
+/*-- //mega-menu--*/
+
+.nav-mega .dropdown {
+    position: static;
+}
+
+.nav-mega .dropdown-menu.mega-menu {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-border-radius-topleft: 0;
+    -webkit-border-top-left-radius: 0;
+    border-top-left-radius: 0;
+    -moz-border-radius-topright: 0;
+    -webkit-border-top-right-radius: 0;
+    border-top-right-radius: 0;
+    width: 80%;
+    margin-top: 0;
+    padding: 0;
+    border-color: #ddd;
+    margin: 0 auto;
+    left: 9%;
+    border-radius: 0;
+}
+
+.nav-mega .dropdown-menu.mega-menu>li {
+    padding: 3em 2em;
+}
+
+.nav-mega .dropdown-menu.mega-menu .media-list .media {
+    padding: 10px;
+    font-size: 13px;
+}
+
+.nav-mega .dropdown-menu.mega-menu .media-list .media-heading {
+    font-size: 16px;
+}
+
+
+.media-list li {
+    list-style: none;
+    color: #999;
+}
+
+.media-list li a {
+    color: #777;
+}
+
+.media-list li a:hover {
+    color: #141415;
+}
+
+.media-list h5 {
+    font-weight: 700;
+    font-size: 1.4em;
+    color: #333;
+}
+
+label.top-log {
+    width: 45%;
+    height: 1px;
+    background: #d7d7da;
+    display: block;
+    margin-bottom: 10px;
+}
+
+li.number-phone {
+    color: #3e3a3a;
+}
+.media-list a img{
+    width:100%;
+}
+/*-- /mega-menu--*/
+
+/*-- /search --*/
+.banner-top.container-fluid {
+    padding: 0;
+    margin: 0;
+}
+
+
+.search {
+    position: relative;
+}
+
+ul.cart-inner-info li {
+    display: inline-block;
+    list-style: none;
+    margin-left: 2em;
+}
+
+.pgoogles-cart.edit {
+    margin-right: 10px;
+}
+
+.top-info ul li {
+    list-style: none;
+    display: inline-block;
+    color: #999;
+    letter-spacing: 2px;
+}
+
+.top-info h6 {
+    color: #9c9b9b;
+    letter-spacing: 3px;
+}
+.top-info i {
+    color: #ff4e00;
+}
+
+.top_googles_cart {
+    text-align: center;
+    background: none;
+    letter-spacing: 2px;
+    color: #454546;
+    cursor: pointer;
+    border: 1px solid #dde2e6;
+    padding: 0.5em 1em;
+}
