--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,144 +1,570 @@
-.product_section .heading_container {
-    margin-bottom: 25px;
-}
-
-.product_section .box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 15px;
-    margin-top: 15px;
-    position: relative;
-    overflow: hidden;
-}
-
-.product_section .box .img-box {
-    background-color: #f8f8f8;
-    width: 100%;
-    height: 275px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    position: relative;
-    padding: 15px;
-}
-
-.product_wrapper {
-    display: flex;
-    flex-direction: column;
-    margin-left: 150px;
-}
-
-.product_section .box .img-box img {
-    height: 175px;
-    max-width: 100%;
-    position: absolute;
-}
-
-.product_section .box .img-box .add_cart_btn {
-    display: inline-block;
-    width: 175px;
+.men-thumb-item {
     text-align: center;
-    height: 45px;
-    line-height: 45px;
-    background-color: #3a4468;
-    color: #ffffff;
     position: relative;
-    -webkit-transform: translate(-50%, 50%);
-    transform: translate(-50%, 50%);
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    opacity: 0;
-    z-index: 3;
 }
 
-.product_section .box .img-box .add_cart_btn:hover {
-    background-color: #f3c93e;
-    color: #ffffff;
+.item-info-product {
+    text-align: center;
 }
 
-.product_section .box .img-box::before {
-    content: "";
-    position: absolute;
+span.item_price {
+    font-size: 18px;
+    color: #d60404;
+}
+
+.info-product-price del {
+    font-weight: 300;
+    margin-left: 13px;
+    font-size: 15px;
+}
+
+.product-sec1.product-sec2 {
+    background-attachment: fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    position: relative;
+}
+
+.effect-bg {
+    margin-top: 40px;
+}
+
+.effect-bg h3 {
+    color: #fff;
+    font-size: 47px;
+    letter-spacing: 3px;
+    font-weight: 600;
+}
+
+.effect-bg h6 {
+    font-size: 18px;
+    letter-spacing: 2px;
+    margin: 18px 0;
+    color: #fff;
+}
+
+.effect-bg p {
+    color: #000;
+}
+
+.product-men img {
+    width: 100%;
+}
+
+.grid_meta {
+    float: left;
+    width: 80%;
+    text-align: left;
+}
+
+button.googles-cart {
+    font-size: 1.4em;
+    color: #333;
+    border: none;
+    text-align: center;
+    border-left: none !important;
+    background: none;
+    margin-top: 0.5em;
+    cursor: pointer;
+}
+button.googles-cart:hover {
+    color: #ff4e00;
+}
+ul.footer_list_icons.single_in li {
+    color: #2f2f2f;
+    font-size: 15px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+ul.footer_list_icons.single_in li a {
+    color: #565555;
+}
+
+ul.footer_list_icons.single_in li a:hover {
+    color: #333;
+}
+.product-googles-info.slide-img {
+    border: none;
+}
+.product-googles-info.slide-img .product-new-top {
+    background: #989494;
+}
+/*-- single-page --*/
+
+.single-right-left h3 {
+    font-size: 23px;
+    color: #ff4e00;
+    margin: 0;
+    letter-spacing: 1px;
+}
+
+.single-right-left p {
+    color: #000;
+    font-size: 20px;
+    margin: 0.5em 0 1em;
+}
+
+.single-right-left del {
+    color: #555;
+    margin-left: 10px;
+    font-weight: 300;
+    font-size: 0.8em;
+}
+
+.description {
+    margin: 1.5em 0;
+}
+
+.description h5 {
+    color: #545454;
+    font-size: 0.9em;
+    margin-bottom: 12px;
+    letter-spacing: 1px;
+}
+
+.description p {
+    color: #545454;
+    line-height: 1.8em;
+    margin: 0.5em 0 0;
+    font-size: 0.9em;
+}
+
+.occasional {
+    margin: 2em 0;
+}
+
+.color-quality-right h5,
+.occasional h5 {
+    color: #000;
+    font-size: 16px;
+    margin: 0 0 12px;
+    letter-spacing: 1px;
+}
+
+.color-quality-right select {
+    padding: 5px 21px;
+}
+
+.colr {
+    width: 33.333%;
+    float: left;
+}
+
+.description input[type="text"] {
+    padding: 8px 8px;
+    color: #ccc;
+    font-size: 15px;
+    width: 45%;
+    outline: none;
+    letter-spacing: 1px;
+    float: left;
+    border-radius: 0;
+}
+
+.description input[type="submit"] {
+    color: #fff;
+    font-size: 16px;
+    background: #333;
+    border: none;
+    outline: none;
+    padding: 7px 17px 9px;
+    letter-spacing: 2px;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.description input[type="submit"]:hover {
+    background: #ff4e00;
+}
+
+.singlepage {
+    float: none !important;
+}
+.bootstrap-tab {
+    margin: 5em 0 0;
+}
+
+.bootstrap-tab-text p {
+    font-size: 14px;
+    color: #999;
+    line-height: 1.8em;
+}
+
+.bootstrap-tab-text h5,
+.add-review h4 {
+    text-transform: uppercase;
+    font-size: 1em;
+    color: #212121;
+    margin: 2em 0 1em 0;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.bootstrap-tab-text p span {
+    display: block;
+    margin: 2em 0 0;
+}
+
+.bootstrap-tab-text-grid-left {
+    float: left;
+    width: 14%;
+}
+
+.bootstrap-tab-text-grid-right {
+    float: right;
+    width: 83%;
+}
+
+.bootstrap-tab-text-grid-right ul li {
+    display: inline-block;
+}
+
+.bootstrap-tab-text-grid-right ul li:nth-child(2) {
+    float: right;
+}
+
+.bootstrap-tab-text-grid-right ul li a {
+    font-size: 1em;
+    color: #ff4e00;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.bootstrap-tab-text-grid-right ul li a:hover {
+    color: #212121;
+}
+
+.bootstrap-tab-text-grid-right ul li a i {
+    left: -1em;
+}
+
+.bootstrap-tab-text-grids {
+    margin: 3em 0 0 0em;
+}
+
+.bootstrap-tab-text-grid-right p {
+    margin: 2em 0 0;
+    color: #545454;
+    font-size: 0.9em;
+    line-height: 2sem;
+}
+
+.bootstrap-tab-text-grid:nth-child(2) {
+    margin: 3em 0 0;
+}
+
+.add-review form {
+    margin: 2em 0 0;
+}
+
+.add-review input[type="text"],
+.add-review input[type="email"],
+.add-review textarea {
+    outline: none;
+    padding: 10px;
+    border: 1px solid #d2d2d2;
+    width: 49%;
+    font-size: 15px;
+    color: #888;
+    float: left;
+    border-radius: 0;
+}
+
+.add-review input[type="email"] {
+    margin-left: 1%;
+}
+
+.add-review textarea {
+    width: 100% !important;
+    min-height: 120px;
+    margin: 1em 0;
+    resize: none;
+}
+
+.add-review input[type="text"]:nth-child(3) {
+    width: 100%;
+    margin: 1em 0;
+}
+
+.add-review input[type="submit"] {
+    outline: none;
+    padding: 14px 0;
+    background: #ff4e00;
+    border: none;
+    width: 20%;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 700;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+.add-review input[type="submit"]:hover {
+    background: #000;
+}
+
+.nav .open > a,
+.nav .open > a:hover,
+.nav .open > a:focus {
+    background-color: #f60b0e;
+    color: #fff;
+}
+
+.product-men.single {
+    margin: 0;
+}
+
+.w3_agile_latest_arrivals {
+    margin: 4em auto 0;
+}
+
+.responsive_tabs_agileits {
+    margin-top: 3em;
+}
+
+.googles.single-item {
+    float: right;
+}
+
+.single_page h6 {
+    font-size: 1.2em;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #4e4c4c;
+    margin-bottom: 1em;
+}
+
+.single_page p {
+    line-height: 2em;
+    color: #888;
+}
+
+p.para {
+    margin-top: 1em;
+}
+
+span.item_price {
+    font-size: 19px;
+    color: #212020;
+    font-weight: 600;
+}
+
+.singlepage button.googles-cart.pgoogles-cart {
+    font-size: 13px;
+    color: #fff;
+    background: #1d1d1d;
+    text-decoration: none;
+    position: relative;
+    border: none;
+    border-radius: 0;
+    text-transform: uppercase;
+    padding: 0.7em 1em;
+    outline: none;
+    letter-spacing: 1px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.responsive_tabs {
+    margin-top: 4em;
+}
+
+.new_arrivals h3 {
+    font-size: 1.4em;
+    color: #080808;
+    font-size: 1.4em;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 3em 0 1em 0;
+}
+
+.googles.single-item.single_page_b {
+    float: left;
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+.img-deals img {
+    width: 100%;
+    border: 1px solid #ddd;
+}
+
+.men-cart-pro {
+    bottom: 0;
     left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
-    z-index: 1;
+    margin: auto;
     opacity: 0;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    transition: all 0.5s ease-out 0s;
+    visibility: hidden;
 }
 
-.product_section .box .detail-box {
-    padding-top: 15px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+.product-men:nth-child(2) .product-new-top,
+.product-men:nth-child(6) .product-new-top,
+.product-men:nth-child(7) .product-new-top {
+    background: #ffc107;
+    /* Safari */
+    -webkit-transform: rotate(-90deg);
+    /* Firefox */
+    -moz-transform: rotate(-90deg);
+    /* IE */
+    -ms-transform: rotate(-90deg);
+    /* Opera */
+    -o-transform: rotate(-90deg);
+}
+.product-new-top,
+.product-men:nth-child(8) .product-new-top,
+.product-new-top,
+.product-men:nth-child(3) .product-new-top {
+    background: #219ff3;
+    /* Safari */
+    -webkit-transform: rotate(-90deg);
+    /* Firefox */
+    -moz-transform: rotate(-90deg);
+    /* IE */
+    -ms-transform: rotate(-90deg);
+    /* Opera */
+    -o-transform: rotate(-90deg);
+}
+
+.product-new-top {
+    background: #f60b0e;
+    color: #fff;
+    right: -18px;
+    position: absolute;
+    top: 10px;
+    width: 79px;
+    font-size: 13px;
+    height: 29px;
+    text-align: center;
+    line-height: 2.3;
+}
+
+span.money {
+    font-size: 1em;
+    color: #ff4e00;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.inner-men-cart-pro {
+    height: 100%;
+    position: relative;
     width: 100%;
+    transition: all 0.5s ease-out 0s;
 }
 
-.product_section .box .product_info {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+.inner-men-cart-pro ul {
+    left: 0;
+    margin: -60px 0 0;
+    padding: 0;
+    position: absolute;
+    top: 45%;
+    width: 100%;
+    transition: all 0.5s ease-out 0s;
 }
 
-.product_section .box .star_container {
-    color: #f2b01e;
+.link-product-add-cart {
+    background: #0c0c0c;
+    color: #fff;
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    text-transform: uppercase;
+    transition: all 0.5s ease-out 0s;
 }
 
-.product_section .box:hover .img-box .add_cart_btn {
+.inner-men-cart-pro > ul > li {
+    display: inline-block;
+}
+
+.inner-men-cart-pro ul li a {
+    color: #fff;
+    transition: all 0.5s ease-out 0s;
+    display: block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+}
+
+.men-thumb-item:hover {
+    cursor: pointer;
+}
+
+.men-thumb-item:hover::before {
     opacity: 1;
     visibility: visible;
 }
 
-.product_section .box:hover .img-box::before {
-    opacity: 0.55;
+.men-thumb-item:hover .men-cart-pro {
+    opacity: 1;
+    visibility: visible;
 }
 
-.product_section .btn_box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin-top: 45px;
+.men-thumb-item:hover .inner-men-cart-pro ul {
+    margin: 20px 0 0;
 }
 
-.product_section .btn_box .view_more-link {
-    display: inline-block;
-    padding: 10px 45px;
-    background-color: #f3c93e;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 1px solid #f3c93e;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
+.inner-men-cart-pro ul li a:hover {
+    background: #ffc229 none repeat scroll 0 0;
 }
 
-.product_section .btn_box .view_more-link:hover {
-    background-color: transparent;
-    color: #f3c93e;
+.inner-men-cart-pro .link-product-add-cart {
+    width: 42%;
+    top: 0px;
+    left: 28%;
+    margin: 0 auto;
+    position: absolute;
+    transition: all 0.5s ease-out 0s;
+    font-size: 0.8em;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+.men-thumb-item:hover .inner-men-cart-pro .link-product-add-cart {
+    top: 77%;
+}
+
+.link-product-add-cart:hover {
+    background: #ff4e00;
+    color: #fff;
+}
+
+.tittle-w3layouts {
+    text-align: center;
+}
+
+.container-fluid.products {
+    margin-left: 200px;
+    margin-right: 200px;
+}
+.product-sec1.product-sec2 {
+    background-attachment: fixed;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    position: relative;
+}
+
+.effect-bg {
+    margin-top: 40px;
+}
+
+.effect-bg h3 {
+    color: #fff;
+    font-size: 47px;
+    letter-spacing: 3px;
+    font-weight: 600;
 }
